--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     <!-----<script src="JS codes/templateliterals.js"></script>----->
     <!-----<script src="JS codes/eString.js"></script>----------->
     <!-----<script src="Guessing Game/guessinggame.js"></script>---->
-    <script src="Temperature Checker/temp.js"></script>
+    <script src="temp.js"></script>
 
 
 
